netcore/src/Koralium.SqlParser.ANTLR/ANTLR/.antlr/KoraliumParser.java
// Generated from c:\Users\seosal\source\repos\Koralium\new\Koralium\netcore\src\Koralium.SqlParser.ANTLR\ANTLR\KoraliumParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class KoraliumParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SCOL=1, DOT=2, OPEN_PAR=3, CLOSE_PAR=4, COMMA=5, ASSIGN=6, STAR=7, PLUS=8, 
		MINUS=9, TILDE=10, PIPE2=11, DIV=12, MOD=13, LT2=14, GT2=15, AMP=16, PIPE=17, 
		LT=18, LT_EQ=19, GT=20, GT_EQ=21, EQ=22, NOT_EQ1=23, NOT_EQ2=24, NLT=25, 
		NGT=26, XOR=27, EXCLAMATION=28, SELECT=29, DISTINCT=30, FROM=31, AS=32, 
		NULL=33, TRUE=34, FALSE=35, WHERE=36, AND=37, OR=38, IS=39, NOT=40, LIKE=41, 
		GROUP=42, BY=43, HAVING=44, IN=45, ORDER=46, ASC=47, DESC=48, LIMIT=49, 
		OFFSET=50, SET=51, CONTAINS=52, SPACES=53, IDENTIFIER=54, COLUMN_IDENTIFIER=55, 
		STRING_LITERAL=56, VARIABLE_ID=57, NUMERIC_LITERAL=58;
	public static final int
		RULE_parse = 0, RULE_statements_list = 1, RULE_sql_statement = 2, RULE_set_variable_statement = 3, 
		RULE_select_statement = 4, RULE_order_by_clause = 5, RULE_order_by_element = 6, 
		RULE_having_clause = 7, RULE_from_clause = 8, RULE_table_name = 9, RULE_subquery = 10, 
		RULE_orderby_subquery = 11, RULE_group_subquery = 12, RULE_variable_reference = 13, 
		RULE_select_expression = 14, RULE_where_clause = 15, RULE_groupby_clause = 16, 
		RULE_groupby_element = 17, RULE_boolean_expression = 18, RULE_predicate = 19, 
		RULE_is_null_predicate = 20, RULE_search_expression = 21, RULE_in_expression = 22, 
		RULE_like_expression = 23, RULE_in_left_scalar = 24, RULE_boolean_comparison_expression = 25, 
		RULE_boolean_comparison_type = 26, RULE_boolean_binary_type = 27, RULE_column_alias = 28, 
		RULE_scalar_expression2 = 29, RULE_scalar_expression = 30, RULE_error = 31, 
		RULE_binary_expression = 32, RULE_binary_operation_type = 33, RULE_function_call = 34, 
		RULE_column_reference = 35, RULE_literal_value = 36, RULE_column_name = 37, 
		RULE_function_name = 38, RULE_table_alias = 39, RULE_any_name = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "statements_list", "sql_statement", "set_variable_statement", 
			"select_statement", "order_by_clause", "order_by_element", "having_clause", 
			"from_clause", "table_name", "subquery", "orderby_subquery", "group_subquery", 
			"variable_reference", "select_expression", "where_clause", "groupby_clause", 
			"groupby_element", "boolean_expression", "predicate", "is_null_predicate", 
			"search_expression", "in_expression", "like_expression", "in_left_scalar", 
			"boolean_comparison_expression", "boolean_comparison_type", "boolean_binary_type", 
			"column_alias", "scalar_expression2", "scalar_expression", "error", "binary_expression", 
			"binary_operation_type", "function_call", "column_reference", "literal_value", 
			"column_name", "function_name", "table_alias", "any_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'.'", "'('", "')'", "','", "'='", "'*'", "'+'", "'-'", 
			"'~'", "'||'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'<'", "'<='", 
			"'>'", "'>='", "'=='", "'!='", "'<>'", "'!<'", "'!>'", "'^'", "'!'", 
			"'SELECT'", "'DISTINCT'", "'FROM'", "'AS'", "'NULL'", "'TRUE'", "'FALSE'", 
			"'WHERE'", "'AND'", "'OR'", "'IS'", "'NOT'", "'LIKE'", "'GROUP'", "'BY'", 
			"'HAVING'", "'IN'", "'ORDER'", "'ASC'", "'DESC'", "'LIMIT'", "'OFFSET'", 
			"'SET'", "'CONTAINS'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", "ASSIGN", "STAR", 
			"PLUS", "MINUS", "TILDE", "PIPE2", "DIV", "MOD", "LT2", "GT2", "AMP", 
			"PIPE", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ1", "NOT_EQ2", "NLT", 
			"NGT", "XOR", "EXCLAMATION", "SELECT", "DISTINCT", "FROM", "AS", "NULL", 
			"TRUE", "FALSE", "WHERE", "AND", "OR", "IS", "NOT", "LIKE", "GROUP", 
			"BY", "HAVING", "IN", "ORDER", "ASC", "DESC", "LIMIT", "OFFSET", "SET", 
			"CONTAINS", "SPACES", "IDENTIFIER", "COLUMN_IDENTIFIER", "STRING_LITERAL", 
			"VARIABLE_ID", "NUMERIC_LITERAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "KoraliumParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public KoraliumParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(KoraliumParser.EOF, 0); }
		public List<Statements_listContext> statements_list() {
			return getRuleContexts(Statements_listContext.class);
		}
		public Statements_listContext statements_list(int i) {
			return getRuleContext(Statements_listContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SCOL) | (1L << SELECT) | (1L << SET))) != 0)) {
				{
				{
				setState(82);
				statements_list();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Statements_listContext extends ParserRuleContext {
		public List<Sql_statementContext> sql_statement() {
			return getRuleContexts(Sql_statementContext.class);
		}
		public Sql_statementContext sql_statement(int i) {
			return getRuleContext(Sql_statementContext.class,i);
		}
		public List<TerminalNode> SCOL() { return getTokens(KoraliumParser.SCOL); }
		public TerminalNode SCOL(int i) {
			return getToken(KoraliumParser.SCOL, i);
		}
		public Statements_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements_list; }
	}

	public final Statements_listContext statements_list() throws RecognitionException {
		Statements_listContext _localctx = new Statements_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SCOL) {
				{
				{
				setState(90);
				match(SCOL);
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(96);
			sql_statement();
			setState(105);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(98); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(97);
						match(SCOL);
						}
						}
						setState(100); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==SCOL );
					setState(102);
					sql_statement();
					}
					} 
				}
				setState(107);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108);
					match(SCOL);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Sql_statementContext extends ParserRuleContext {
		public Set_variable_statementContext set_variable_statement() {
			return getRuleContext(Set_variable_statementContext.class,0);
		}
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public Sql_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_statement; }
	}

	public final Sql_statementContext sql_statement() throws RecognitionException {
		Sql_statementContext _localctx = new Sql_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sql_statement);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SET:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				set_variable_statement();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				select_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Set_variable_statementContext extends ParserRuleContext {
		public TerminalNode SET() { return getToken(KoraliumParser.SET, 0); }
		public Variable_referenceContext variable_reference() {
			return getRuleContext(Variable_referenceContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(KoraliumParser.ASSIGN, 0); }
		public Scalar_expressionContext scalar_expression() {
			return getRuleContext(Scalar_expressionContext.class,0);
		}
		public Set_variable_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_set_variable_statement; }
	}

	public final Set_variable_statementContext set_variable_statement() throws RecognitionException {
		Set_variable_statementContext _localctx = new Set_variable_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_set_variable_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(SET);
			setState(119);
			variable_reference();
			setState(120);
			match(ASSIGN);
			setState(121);
			scalar_expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_statementContext extends ParserRuleContext {
		public Scalar_expressionContext limit;
		public Scalar_expressionContext offset;
		public TerminalNode SELECT() { return getToken(KoraliumParser.SELECT, 0); }
		public List<Select_expressionContext> select_expression() {
			return getRuleContexts(Select_expressionContext.class);
		}
		public Select_expressionContext select_expression(int i) {
			return getRuleContext(Select_expressionContext.class,i);
		}
		public TerminalNode DISTINCT() { return getToken(KoraliumParser.DISTINCT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(KoraliumParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KoraliumParser.COMMA, i);
		}
		public TerminalNode FROM() { return getToken(KoraliumParser.FROM, 0); }
		public From_clauseContext from_clause() {
			return getRuleContext(From_clauseContext.class,0);
		}
		public TerminalNode ORDER() { return getToken(KoraliumParser.ORDER, 0); }
		public List<TerminalNode> BY() { return getTokens(KoraliumParser.BY); }
		public TerminalNode BY(int i) {
			return getToken(KoraliumParser.BY, i);
		}
		public Order_by_clauseContext order_by_clause() {
			return getRuleContext(Order_by_clauseContext.class,0);
		}
		public TerminalNode LIMIT() { return getToken(KoraliumParser.LIMIT, 0); }
		public TerminalNode OFFSET() { return getToken(KoraliumParser.OFFSET, 0); }
		public List<Scalar_expressionContext> scalar_expression() {
			return getRuleContexts(Scalar_expressionContext.class);
		}
		public Scalar_expressionContext scalar_expression(int i) {
			return getRuleContext(Scalar_expressionContext.class,i);
		}
		public TerminalNode WHERE() { return getToken(KoraliumParser.WHERE, 0); }
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public TerminalNode GROUP() { return getToken(KoraliumParser.GROUP, 0); }
		public Groupby_clauseContext groupby_clause() {
			return getRuleContext(Groupby_clauseContext.class,0);
		}
		public TerminalNode HAVING() { return getToken(KoraliumParser.HAVING, 0); }
		public Having_clauseContext having_clause() {
			return getRuleContext(Having_clauseContext.class,0);
		}
		public Select_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_statement; }
	}

	public final Select_statementContext select_statement() throws RecognitionException {
		Select_statementContext _localctx = new Select_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_select_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(123);
			match(SELECT);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTINCT) {
				{
				setState(124);
				match(DISTINCT);
				}
			}

			setState(127);
			select_expression();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(128);
				match(COMMA);
				setState(129);
				select_expression();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(135);
				match(FROM);
				setState(136);
				from_clause();
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WHERE) {
					{
					setState(137);
					match(WHERE);
					setState(138);
					where_clause();
					}
				}

				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==GROUP) {
					{
					setState(141);
					match(GROUP);
					setState(142);
					match(BY);
					setState(143);
					groupby_clause();
					}
				}

				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==HAVING) {
					{
					setState(146);
					match(HAVING);
					setState(147);
					having_clause();
					}
				}

				}
			}

			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDER) {
				{
				setState(152);
				match(ORDER);
				setState(153);
				match(BY);
				setState(154);
				order_by_clause();
				}
			}

			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIMIT) {
				{
				setState(157);
				match(LIMIT);
				setState(158);
				((Select_statementContext)_localctx).limit = scalar_expression(0);
				}
			}

			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OFFSET) {
				{
				setState(161);
				match(OFFSET);
				setState(162);
				((Select_statementContext)_localctx).offset = scalar_expression(0);
				}
			}

			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Order_by_clauseContext extends ParserRuleContext {
		public List<Order_by_elementContext> order_by_element() {
			return getRuleContexts(Order_by_elementContext.class);
		}
		public Order_by_elementContext order_by_element(int i) {
			return getRuleContext(Order_by_elementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(KoraliumParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(KoraliumParser.COMMA, i);
		}
		public Order_by_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_order_by_clause; }
	}

	public final Order_by_clauseContext order_by_clause() throws RecognitionException {
		Order_by_clauseContext _localctx = new Order_by_clauseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_order_by_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			order_by_element();
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(166);
				match(COMMA);
				setState(167);
				order_by_element();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Order_by_elementContext extends ParserRuleContext {
		public Scalar_expressionContext scalar;
		public Orderby_subqueryContext query;
		public Token order;
		public Scalar_expressionContext scalar_expression() {
			return getRuleContext(Scalar_expressionContext.class,0);
		}
		public Orderby_subqueryContext orderby_subquery() {
			return getRuleContext(Orderby_subqueryContext.class,0);
		}
		public TerminalNode ASC() { return getToken(KoraliumParser.ASC, 0); }
		public TerminalNode DESC() { return getToken(KoraliumParser.DESC, 0); }
		public Order_by_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_order_by_element; }
	}

	public final Order_by_elementContext order_by_element() throws RecognitionException {
		Order_by_elementContext _localctx = new Order_by_elementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_order_by_element);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NULL:
			case TRUE:
			case FALSE:
			case IDENTIFIER:
			case STRING_LITERAL:
			case VARIABLE_ID:
			case NUMERIC_LITERAL:
				{
				setState(173);
				((Order_by_elementContext)_localctx).scalar = scalar_expression(0);
				}
				break;
			case OPEN_PAR:
				{
				setState(174);
				((Order_by_elementContext)_localctx).query = orderby_subquery();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASC || _la==DESC) {
				{
				setState(177);
				((Order_by_elementContext)_localctx).order = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==ASC || _la==DESC) ) {
					((Order_by_elementContext)_localctx).order = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Having_clauseContext extends ParserRuleContext {
		public Boolean_expressionContext boolean_expression() {
			return getRuleContext(Boolean_expressionContext.class,0);
		}
		public Having_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_having_clause; }
	}

	public final Having_clauseContext having_clause() throws RecognitionException {
		Having_clauseContext _localctx = new Having_clauseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_having_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			boolean_expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class From_clauseContext extends ParserRuleContext {
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Table_aliasContext table_alias() {
			return getRuleContext(Table_aliasContext.class,0);
		}
		public TerminalNode AS() { return getToken(KoraliumParser.AS, 0); }
		public SubqueryContext subquery() {
			return getRuleContext(SubqueryContext.class,0);
		}
		public From_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_from_clause; }
	}

	public final From_clauseContext from_clause() throws RecognitionException {
		From_clauseContext _localctx = new From_clauseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_from_clause);
		int _la;
		try {
			setState(190);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(182);
				table_name();
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAR) | (1L << AS) | (1L << IDENTIFIER) | (1L << STRING_LITERAL))) != 0)) {
					{
					setState(184);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS) {
						{
						setState(183);
						match(AS);
						}
					}

					setState(186);
					table_alias();
					}
				}

				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(189);
				subquery();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_nameContext extends ParserRuleContext {
		public Any_nameContext any_name() {
			return getRuleContext(Any_nameContext.class,0);
		}
		public Table_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_name; }
	}

	public final Table_nameContext table_name() throws RecognitionException {
		Table_nameContext _localctx = new Table_nameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_table_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			any_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubqueryContext extends ParserRuleContext {
		public TerminalNode OPEN_PAR() { return getToken(KoraliumParser.OPEN_PAR, 0); }
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(KoraliumParser.CLOSE_PAR, 0); }
		public Table_aliasContext table_alias() {
			return getRuleContext(Table_aliasContext.class,0);
		}
		public TerminalNode AS() { return getToken(KoraliumParser.AS, 0); }
		public SubqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subquery; }
	}

	public final SubqueryContext subquery() throws RecognitionException {
		SubqueryContext _localctx = new SubqueryContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_subquery);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(OPEN_PAR);
			setState(195);
			select_statement();
			setState(196);
			match(CLOSE_PAR);
			setState(201);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OPEN_PAR) | (1L << AS) | (1L << IDENTIFIER) | (1L << STRING_LITERAL))) != 0)) {
				{
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(197);
					match(AS);
					}
				}

				setState(200);
				table_alias();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Orderby_subqueryContext extends ParserRuleContext {
		public TerminalNode OPEN_PAR() { return getToken(KoraliumParser.OPEN_PAR, 0); }
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(KoraliumParser.CLOSE_PAR, 0); }
		public Orderby_subqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orderby_subquery; }
	}

	public final Orderby_subqueryContext orderby_subquery() throws RecognitionException {
		Orderby_subqueryContext _localctx = new Orderby_subqueryContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_orderby_subquery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			match(OPEN_PAR);
			setState(204);
			select_statement();
			setState(205);
			match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Group_subqueryContext extends ParserRuleContext {
		public TerminalNode OPEN_PAR() { return getToken(KoraliumParser.OPEN_PAR, 0); }
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(KoraliumParser.CLOSE_PAR, 0); }
		public Group_subqueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_group_subquery; }
	}

	public final Group_subqueryContext group_subquery() throws RecognitionException {
		Group_subqueryContext _localctx = new Group_subqueryContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_group_subquery);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			match(OPEN_PAR);
			setState(208);
			select_statement();
			setState(209);
			match(CLOSE_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_referenceContext extends ParserRuleContext {
		public Token variableName;
		public TerminalNode VARIABLE_ID() { return getToken(KoraliumParser.VARIABLE_ID, 0); }
		public Variable_referenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_reference; }
	}
